@@ -71,7 +71,7 @@ else:
 class SfvEntry(object):
 	"""Represents a record from a .sfv file."""
 	def __init__(self, file_name, crc32="00000000"):
-		self.file_name = file_name
+		self.file_name = file_name.strip('"')
 		self.crc32 = crc32
 
 	def get_crc_32(self):
@@ -294,7 +294,7 @@ def same_nfo(one, two):
 		return len(no) == len(onec)
 	
 
-"""Example SFV file:
+"""Example SFV files:
 ; Generated by WIN-SFV32 v1 with MP3-RELEASER [Version:2000.2.2.1] by MorGoTH on 3/11/01 9:42:54 AM (px`hehxW)
 ; For more information visit http://morgoth.smartftp.com
 ;
@@ -325,5 +325,11 @@ def same_nfo(one, two):
 ;              Created with MorGoTH's MP3 Releaser
 ;!SFV_COMMENT_END
 01-olav_basoski_-_live_at_slam_fm_10-03-01-1real.mp3 2DEA959E
+
+; sfv created by SFV Checker
+;
+"gh-flow.subs.rar" 83a20923
+;
+; Total 1 File(s)	Combined CRC32 Checksum: 83a20923
 """
 	
